tests/ui/compile-fail/pinned_drop/no_fn.stderr
error[E0046]: not all trait items implemented, missing: `drop`
 --> tests/ui/compile-fail/pinned_drop/no_fn.rs:7:1
  |
7 | impl PinnedDrop for Foo {}
  | ^^^^^^^^^^^^^^^^^^^^^^^ missing `drop` in implementation
  |
  = help: implement the missing item: `fn drop(self: Pin<&mut Self>, _: OnlyCallFromDrop) { todo!() }`
